fluentd_graylog/fluentd_2/graylog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog-deploy
  namespace: graylog-demo
  labels:
    service: graylog-deploy
spec:
  replicas: 1
  selector:
      matchLabels:
        service: graylog-deploy
  template:
    metadata:
      labels:
        service: graylog-deploy
    spec:
      containers:
      - name: graylog3
        image: graylog/graylog:3.0
        ports:
        - containerPort: 9000
        - containerPort: 12201

---
apiVersion: v1
kind: Service
metadata:
  name: graylog3
  namespace: graylog-demo
spec:
  selector:
    service: graylog-deploy
  ports:
  - name: http-dashboard
    port: 80
    targetPort: 9000
  - name: tcp-input
    port: 12201
    targetPort: 12201
