fluentd_graylog/fluentd_2/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  namespace: graylog-demo
  labels:
    service: mongo-deploy
spec:
  replicas: 1
  selector:
      matchLabels:
        service: mongo-deploy
  template:
    metadata:
      labels:
        service: mongo-deploy
    spec:
      containers:
      - name: mongodb
        image: mongo:3
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    service: mongo-deploy
  ports:
  - name: tcp-mongo
    port: 27017
    targetPort: 27017
