fluentd_graylog/fluentd_2/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myk-ingress-gateway
  namespace: graylog-demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 9000
      name: http-dash
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graylog-virtualservice
  namespace: graylog-demo
spec:
  hosts:
  - "*"
  gateways:
  - myk-ingress-gateway
  http:
  - route:
    - destination:
        host: graylog3
        port:
          number: 80
